# flappy-bin-chicken

./: .gitignore  CMakeLists.txt  README.md  main  main.c  makefile
game/: makefile  pipe.c
game/include/: pipe.h
game/src/: bird.c  game.c  main.c  main_deprecated.c  pipe.c
game/src/include/: bird.h  game.h  pipe.h
src/: bird.c  game.c  main.c  menus.c  pipe.c
src/include/: bird.h  game.h  main.h  menus.h  pipe.h
